# VersatIL

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  PHASE_ACT_EXAMPLE.md  README.md  codecov.yml  contributors.md  create_evaluation_dataset.ipynb  dataset_analysis.ipynb  debug_inference_vs_val.py  depth_analysis.ipynb  depth_statistics.ipynb  environment.yml  environment2.yml  mkdocs.yml  pyproject.toml  smooth_trajectory.ipynb
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: changelog.md  gen_ref_pages.py  index.md  known-issues.md
docs/architecture/: algorithms.md  data.md  decoders.md  encoding.md  explainability.md  inference.md  overview.md  post_training_compression.md  quantization.md
docs/getting-started/: configuration.md  inference.md  installation.md  post_training_compression.md  quantization_aware_training.md  training.md
docs/papers-reproducibility-instructions/: index.md  supervised-moe-bowel-retraction.md
experiments/: README.md  act_bowel_retraction.yaml  act_lang_bowel_retraction.yaml  act_libero.yaml  action_transformer_bowel_retraction.yaml  action_transformer_lang_bowel_retraction.yaml  action_transformer_lang_libero.yaml  action_transformer_lang_metaworld.yaml  action_transformer_libero.yaml  action_transformer_libero10.yaml  actiontransformer_bowel_retraction.yaml  diffusion_dit_bowel_retraction.yaml  diffusion_unet_bowel_retraction.yaml  fast_decoder_bowel_retraction.yaml  fast_detr_bowel_retraction.yaml  fast_detr_decoder_bowel_retraction.yaml  fast_detr_vae_bowel_retraction.yaml  fast_gpt_bowel_retraction.yaml  fast_gpt_decoder_bowel_retraction.yaml  fast_gpt_vae_bowel_retraction.yaml  fast_with_vae_bowel_retraction.yaml  flow_cc_dit_libero.yaml  flow_dit_block_bowel_retraction.yaml  flow_dit_block_libero.yaml  flow_dit_bowel_retraction.yaml  flow_dit_cross_attention_libero.yaml  flow_dit_libero.yaml  flow_dit_multimodal_libero.yaml  flow_unet_bowel_retraction.yaml  flow_unet_libero.yaml  free_transformer_bowel_retraction.yaml  free_transformer_mmd_bowel_retraction.yaml  freetransformer_bowel_retraction.yaml  lact_bowel_retraction.yaml  lact_language_bowel_retraction.yaml  lact_language_libero.yaml  lact_libero.yaml  mixture_act_bowel_retraction.yaml  moe_free_transformer_bowel_retraction.yaml  phase_act_bowel_retraction.yaml  (+4 more)
experiments/experiment/: bowel_retraction_act.yaml  bowel_retraction_diffusion_dit.yaml  bowel_retraction_diffusion_unet.yaml  bowel_retraction_fast_decoder.yaml  bowel_retraction_fast_vae.yaml  bowel_retraction_flow_dit.yaml  bowel_retraction_flow_unet.yaml  bowel_retraction_phase_act.yaml  flow_dit_libero.yaml
experiments/inference/: act_default.yaml  diffusion_default.yaml
experiments/training/: act_default.yaml  act_latent.yaml  diffusion_default.yaml  gpt_decoder_default.yaml  phase_act_default.yaml
hydra_configs/: README.md
hydra_configs/end_to_end_explain/: default.yaml
hydra_configs/end_to_end_ptq/: eager_xnnpack.yaml  per_module_example.yaml  pt2e_xnnpack.yaml  unstructured_prune_x86.yaml  unstructured_prune_x86_decoder_only.yaml  x86_ptq.yaml
hydra_configs/experiment/: base.yaml  synthetic.yaml
hydra_configs/inference/: default.yaml
hydra_configs/quantization/: qat_int2_weight_only.yaml  qat_int4_weight_only.yaml  qat_int8_dynamic_intx_int4.yaml  x86_static_pt2e.yaml
hydra_configs/synthetic_presets/: README.md  circle.yaml  corridor_k8.yaml  radial_k16.yaml  sequential.yaml
hydra_configs/training/: default.yaml  ema.yaml  gpt_decoder_default.yaml  latent.yaml  synthetic.yaml
research_scripts/: README.md  visualize_latent_space.py
scripts/: convert_smolvla_checkpoint.py  download_vla_checkpoints.py  run_libero_local.sh  sbatch_sweep.sh  sweep_suites_parallel.sh
scripts/hpc/: launch_phase2.sh  launch_synthetic_mdn_v4.sh  launch_synthetic_sweep_v4.sh
src/: cvae_image_generation.py  data_influence_endpoint.py  explainer_endpoint.py  inference_client.py  legacy_config.py  legacy_constants.py  metrics.py  pytorch_utils.py  run_models.ipynb  test.ipynb  workspace.py
src/dataset/: dataloader.py  preprocess.py  replay_buffer.py  sampler.py
src/endpoints/: act_endpoint.py  diffusion_endpoint.py  flow_matching_endpoint.py  phase_act_endpoint.py  run_distributed.sh  start_training.py
src/legacy/: diffusion_distributed_endpoint.py  inference_client.py  old_dataset.py  ros_testing.py
src/model/: act_policy.py  diffusion_policy.py  dit_policy.py  explainer.py  flow_matching_policy.py  phase_act_policy.py
src/refactoring/: workspace.py
src/versatil/: __init__.py  benchmark_flash_attention.py  validation.py  workspace.py
tests/: CLAUDE.md  conftest.py  test_train_endpoint.py  test_validation.py  test_workspace.py
tests/checkpoint_loading/: conftest.py  test_base.py  test_compressed_policy.py  test_dependency_direction.py  test_float_policy.py  test_qat_policy.py
tests/common/: test_dict_of_tensor_mixin.py  test_logging.py  test_module_attr_mixin.py  test_module_state.py  test_omegaconf_ops.py  test_set_cache_dir.py  test_tensor_ops.py
tests/configs/: test_action_head_configs.py  test_algorithm_configs.py  test_decoder_configs.py  test_deployment.py  test_encoding_configs.py  test_experiment.py  test_experiment_configs.py  test_inference.py  test_latent_configs.py  test_loss.py  test_loss_configs.py  test_main.py  test_optimizer_config.py  test_policy.py  test_policy_configs.py  test_post_training_compression.py  test_quantization.py  test_regularizer.py  test_resolvers.py  test_target_importability.py  test_target_signatures.py  test_task.py  test_task_configs.py  test_training.py  test_training_configs.py
tests/data/: conftest.py  test_action_processor.py  test_augmentation_pipeline.py  test_constants.py  test_dataloader.py  test_episodic_dataset.py  test_metadata.py  test_sample_builder.py  test_task.py  test_transform.py  test_transform_builder.py
tests/endpoints/: __init__.py  conftest.py  test_deploy.py  test_end_to_end.py  test_explain.py  test_inference_client.py  (+3 more)
(+2613 files in other folders)
