[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VersatIL"
version = "0.3.0"
description = "A python library for training any robot policy through Imitation Learning, with dependencies handled by uv"
authors = [
    { name = "Lorenzo Mazza", email = "lorenzo.mazza@nct-dresden.de" },
    { name = "Ariel Rodriguez", email = "ariel.rodriguezjimenez@nct-dresden.de" }
]
license = {text = "MIT"}
requires-python = ">=3.14"
dependencies = [
  "accelerate==1.11.0",
  "albumentations==2.0.8",
  "av==16.1.0",
  "diffusers==0.36.0",
  "geomloss==0.2.6",
  "h5py==3.15.1",
  "huggingface-hub==1.5.0",
  "hydra-core @ git+https://github.com/facebookresearch/hydra.git@3338eba3bff867b63b2a3acd63170481fd060974",
  "joblib==1.5.0",
  "matplotlib==3.10.7",
  "numba==0.64.0",
  "numpy==2.3.5",
  "omegaconf==2.4.0.dev11",
  "opencv-python-headless==4.13.0.92",
  "pandas==2.3.3",
  "psutil==7.1.3",
  "pyarrow==23.0.0",
  "pykeops==2.3",
  "pytest==8.4.2",
  "python-dotenv==1.2.1",
  "lightning==2.6.1",
  "pytorch-lightning==2.6.1",
  "pyyaml==6.0.3",
  "ruff==0.15.6",
  "safetensors==0.6.2",
  "scikit-learn==1.7.2",
  "scipy==1.16.3",
  "seaborn==0.13.2",
  "termcolor==3.2.0",
  "threadpoolctl==3.6.0",
  "timm==1.0.27",
  "torch==2.12.0",
  "torchao==0.17.0",
  "torchvision",
  "tqdm==4.67.1",
  "transformers==5.8.0",
  "tso-robotics-sockets",
  "versatil-constants==0.2.1",
  "pre-commit",
  "wandb==0.22.3",
  "zarr==3.1.3",
  "peft>=0.19.1",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
]

[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
torchao = { index = "pytorch" }
torchvision = { index = "pytorch" }
versatil-constants = { path = "../versatil_constants", editable = true }


[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests with mocked dependencies (deselect with '-m \"not unit\"')",
    "integration: Slower tests with real component, endpoint, or compression workflows (deselect with '-m \"not integration\"')",
    "slow: Very slow tests (deselect with '-m \"not slow\"')",
    "requires_gpu: Tests that require GPU (deselect with '-m \"not requires_gpu\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not slow and not integration and not requires_gpu",
]
filterwarnings = [
    "ignore::pydantic._internal._generate_schema.UnsupportedFieldAttributeWarning",
    "ignore:.*Defaults list is missing.*:UserWarning",
    "ignore:.*is validated against ConfigStore schema.*:UserWarning",
    "ignore:.*autocast.*:UserWarning",
    "ignore:.*self.log.*:UserWarning",
    "ignore::DeprecationWarning:geomloss",
    "ignore::SyntaxWarning:geomloss",
    "ignore:.*are not valid for transform.*:UserWarning",
    "ignore:ShiftScaleRotate is a special case.*:UserWarning",
    "ignore:Initializing zero-element tensors.*:UserWarning",
    "ignore:.*weights_only=False.*:FutureWarning",
    "ignore:.*tensorboardX.*:UserWarning",
    "ignore:.*Checkpoint directory.*:UserWarning",
    "ignore:.*does not have many workers.*:UserWarning",
    "ignore:.*number of training batches.*is smaller than.*:UserWarning",
    "ignore:.*validated against ConfigStore schema.*:UserWarning:pluggy",
    "ignore:.*degrees of freedom.*:UserWarning",
    "ignore:.*torch.jit.script_method.*:DeprecationWarning",
    "ignore:.*isinstance.*LeafSpec.*:FutureWarning",
    "ignore:.*Importing from torchao.dtypes.*:DeprecationWarning",
    "ignore:.*Importing BlockSparseLayout.*:DeprecationWarning",
    "ignore:.*crc32c usage is deprecated.*:DeprecationWarning",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
# Same as Black
line-length = 88
target-version = "py313"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "lightning_logs",
    ".qodo",
    ".github",
    ".idea",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PLC",    # pylint convention (includes PLC0415 for inline imports)
]

ignore = [
    "E501",   # Line too long (let formatter handle this)
    "B008",   # Do not perform function calls in argument defaults (needed for FastAPI/Hydra)
    "B905",   # zip without explicit strict parameter
    "N806",   # Variable in function should be lowercase (allow uppercase for tensor dimensions like B, T, C, H, W)
    "N812",   # Lowercase imported as non-lowercase (for backwards compatibility)
    "N999",   # Invalid module name (some legacy modules)
    "TC001",  # Move application imports into type-checking block (often used at runtime)
    "TC002",  # Move third-party imports into type-checking block (often used at runtime)
    "PLC0206", # Dict iteration without .items() (performance not critical for our use case)
    "SIM118", # key in dict.keys() — breaks on MagicMock in tests
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "N802",   # Function name should be lowercase (test methods can use different naming)
    "N806",   # Variable in function should be lowercase
]
# Ignore imports in __init__.py files
"__init__.py" = ["F401", "F403", "E402"]
# Allow uppercase R for rotation matrices
"src/data/action_processor.py" = ["N803"]
# Ignore loop variable binding in closures for hooks (intentional behavior)
"src/versatil/explain/**/*.py" = ["B023"]

[tool.ruff.lint.isort]
known-first-party = ["versatil"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[project.entry-points."zarr.codecs"]
versatil_webp = "versatil.data.preprocessing.codecs:WebPCodec"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/versatil"]

[tool.coverage.run]
omit = [
    "src/versatil/explain/*",
    "src/versatil/endpoints/explain.py",
]
