[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "VersatIL"
version = "0.5.0.dev0"
description = "Modular imitation learning framework for training, compressing, and deploying robot manipulation policies"
readme = "README.md"
authors = [
    { name = "Lorenzo Mazza", email = "lorenzo.mazza@nct-dresden.de" }
]
maintainers = [
    { name = "Lorenzo Mazza", email = "lorenzo.mazza@nct-dresden.de" },
    { name = "Ariel Rodriguez", email = "ariel.rodriguezjimenez@nct-dresden.de" }
]
license = "MIT"
license-files = ["LICENSE"]
keywords = [
  "imitation-learning",
  "robotics",
  "robot-learning",
  "behavioral-cloning",
  "diffusion-policy",
  "vision-language-action",
  "quantization",
  "pytorch",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.13,<3.15"
dependencies = [
  "accelerate>=1.11",
  "albumentations>=2.0.8",
  "av>=16.1",
  "diffusers>=0.36",
  "geomloss>=0.2.6",
  "google-crc32c>=1.7",
  "h5py>=3.15",
  "huggingface-hub>=1.5",
  "hydra-core>=1.4.0.dev5,<1.5",
  "joblib>=1.5",
  "matplotlib>=3.10",
  "numba>=0.64",
  "numpy>=2.3",
  "omegaconf>=2.4.0.dev12,<2.5",
  "opencv-python-headless>=4.13",
  "pandas>=2.3",
  "psutil>=7.1",
  "pyarrow>=23",
  "pykeops>=2.3",
  "python-dotenv>=1.2",
  "lightning>=2.6",
  "pytorch-lightning>=2.6",
  "pyyaml>=6.0",
  "safetensors>=0.6",
  "scikit-learn>=1.7.1",
  "scipy>=1.16",
  "seaborn>=0.13",
  "termcolor>=3.2",
  "threadpoolctl>=3.6",
  "timm>=1.0.27",
  "torch>=2.12,<2.13",
  "torchao>=0.17,<0.18",
  "torchvision>=0.27,<0.28",
  "tqdm>=4.67",
  "transformers>=5.9",
  "tso-robotics-sockets>=0.2",
  "versatil-constants>=0.2.1",
  "wandb>=0.22",
  "zarr>=3.1.3",
  "peft>=0.19.1",
]

[project.urls]
Homepage = "https://lorenzo-mazza.github.io/VersatIL"
Documentation = "https://lorenzo-mazza.github.io/VersatIL"
Repository = "https://github.com/Lorenzo-Mazza/VersatIL"
Changelog = "https://github.com/Lorenzo-Mazza/VersatIL/blob/main/CHANGELOG.md"
Issues = "https://github.com/Lorenzo-Mazza/VersatIL/issues"

[dependency-groups]
dev = [
  "pre-commit",
  "pytest==8.4.2",
  "pytest-cov==7.1.0",
  "ruff==0.15.6",
]

[project.optional-dependencies]
cpu = [
  "torch>=2.12,<2.13",
  "torchao>=0.17,<0.18",
  "torchvision>=0.27,<0.28",
]
gpu = [
  "torch>=2.12,<2.13; sys_platform == 'linux'",
  "torchao>=0.17,<0.18; sys_platform == 'linux'",
  "torchvision>=0.27,<0.28; sys_platform == 'linux'",
]
executorch = [
  "executorch>=1.3.1,<1.4; python_version < '3.14'",
]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-gen-files",
  "mkdocs-literate-nav",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
explicit = true

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "gpu" },
  ],
]
required-environments = [
  "python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'x86_64'",
  "python_version == '3.13' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "python_version == '3.14' and sys_platform == 'linux' and platform_machine == 'aarch64'",
  "python_version == '3.13' and sys_platform == 'darwin' and platform_machine == 'arm64'",
  "python_version == '3.14' and sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
torch = [
  { index = "pypi", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", extra = "gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchao = [
  { index = "pypi", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", extra = "gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
torchvision = [
  { index = "pypi", marker = "sys_platform == 'darwin'" },
  { index = "pytorch-cpu", extra = "cpu", marker = "sys_platform == 'linux'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux' and platform_machine == 'aarch64'" },
  { index = "pytorch-cu130", extra = "gpu", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]


[tool.pytest.ini_options]
markers = [
    "unit: Fast unit tests with mocked dependencies (deselect with '-m \"not unit\"')",
    "integration: Slower tests with real component, endpoint, or compression workflows (deselect with '-m \"not integration\"')",
    "slow: Very slow tests (deselect with '-m \"not slow\"')",
    "requires_gpu: Tests that require GPU (deselect with '-m \"not requires_gpu\"')",
    "requires_executorch: Tests that require a real ExecuTorch installation (deselect with '-m \"not requires_executorch\"')",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "-m", "not slow and not integration and not requires_gpu and not requires_executorch",
]
filterwarnings = [
    "ignore::pydantic._internal._generate_schema.UnsupportedFieldAttributeWarning",
    "ignore:.*Defaults list is missing.*:UserWarning",
    "ignore:.*is validated against ConfigStore schema.*:UserWarning",
    "ignore:.*autocast.*:UserWarning",
    "ignore:.*self.log.*:UserWarning",
    "ignore::DeprecationWarning:geomloss",
    "ignore::SyntaxWarning:geomloss",
    "ignore:ShiftScaleRotate is a special case.*:UserWarning",
    "ignore:Initializing zero-element tensors.*:UserWarning",
    "ignore:.*weights_only=False.*:FutureWarning",
    "ignore:.*tensorboardX.*:UserWarning",
    "ignore:.*Checkpoint directory.*:UserWarning",
    "ignore:.*does not have many workers.*:UserWarning",
    "ignore:.*number of training batches.*is smaller than.*:UserWarning",
    "ignore:.*validated against ConfigStore schema.*:UserWarning:pluggy",
    "ignore:.*degrees of freedom.*:UserWarning",
    "ignore:.*torch.jit.script_method.*:DeprecationWarning",
    "ignore:.*isinstance.*LeafSpec.*:FutureWarning",
    "ignore:.*Importing from torchao.dtypes.*:DeprecationWarning",
    "ignore:.*Importing BlockSparseLayout.*:DeprecationWarning",
]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
# Same as Black
line-length = 88
# Keep the lint target at the oldest supported interpreter. Raising it enables
# TC003 fixes that move imports into TYPE_CHECKING blocks, breaking OmegaConf
# runtime type resolution.
target-version = "py313"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "lightning_logs",
    ".qodo",
    ".github",
    ".idea",
]

[tool.ruff.lint]
# Enable pycodestyle (E, W), Pyflakes (F), isort (I), and other useful rules
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PLC",    # pylint convention (includes PLC0415 for inline imports)
]

ignore = [
    "E501",   # Line too long (let formatter handle this)
    "B008",   # Do not perform function calls in argument defaults (needed for FastAPI/Hydra)
    "N806",   # Variable in function should be lowercase (allow uppercase for tensor dimensions like B, T, C, H, W)
    "N812",   # Lowercase imported as non-lowercase (for backwards compatibility)
    "N999",   # Invalid module name (some legacy modules)
    "TC001",  # Move application imports into type-checking block (often used at runtime)
    "TC002",  # Move third-party imports into type-checking block (often used at runtime)
    "PLC0206", # Dict iteration without .items() (performance not critical for our use case)
    "SIM118", # key in dict.keys() — breaks on MagicMock in tests
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in test files
"tests/**/*.py" = [
    "N802",   # Function name should be lowercase (test methods can use different naming)
    "N806",   # Variable in function should be lowercase
]
# Ignore imports in __init__.py files
"__init__.py" = ["F401", "F403", "E402"]
# Ignore loop variable binding in closures for hooks (intentional behavior)
"src/versatil/explainability/**/*.py" = ["B023"]

[tool.ruff.lint.isort]
known-first-party = ["versatil"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.format]
# Use Black-compatible formatting
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[project.entry-points."zarr.codecs"]
versatil_webp = "versatil.data.preprocessing.codecs:WebPCodec"

[tool.hatch.build.targets.wheel]
packages = ["src/versatil"]

[tool.coverage.run]
omit = [

]

[tool.coverage.report]
exclude_also = [
  # numba-compiled functions execute as machine code; coverage cannot trace them
  "@numba.jit",
]
